--- a/app/src/main/res/layout/fragment_tweets_list.xml
+++ b/app/src/main/res/layout/fragment_tweets_list.xml
@@ -1,11 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_home_timeline"
-    tools:context="com.lsilbers.apps.twitternator.activities.HomeTimelineActivity">
+    tools:context="com.lsilbers.apps.twitternator.fragments.TweetsListFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="wrap_content"
