--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.lsilbers.apps.twitternator.activities.ProfileActivity">
+    android:layout_height="match_parent"
+    tools:context="com.lsilbers.apps.twitternator.activities.ProfileActivity"
+    android:background="#FFFFFF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +20,12 @@
             android:id="@+id/ivAvatar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,6 +33,7 @@
             android:layout_toEndOf="@id/ivAvatar"
             android:layout_toRightOf="@id/ivAvatar"
             android:id="@+id/tvFullName"
+            android:textColor="@color/name"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -38,6 +42,8 @@
             android:layout_below="@id/tvFullName"
             android:layout_toEndOf="@id/ivAvatar"
             android:layout_toRightOf="@id/ivAvatar"
+            android:textColor="@color/screen_name"
+            android:textSize="12sp"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -45,7 +51,8 @@
             android:layout_below="@id/tvScreenName"
             android:layout_toRightOf="@id/ivAvatar"
             android:layout_toEndOf="@id/ivAvatar"
-            android:id="@+id/tvTagline"/>
+            android:id="@+id/tvTagline"
+            android:textColor="@color/twitter_black"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,6 +60,9 @@
             android:layout_below="@id/tvTagline"
             android:layout_toRightOf="@id/ivAvatar"
             android:layout_toEndOf="@id/ivAvatar"
+            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
+            android:textSize="12sp"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -61,6 +71,18 @@
             android:layout_below="@id/tvTagline"
             android:layout_toRightOf="@id/tvFollowers"
             android:layout_toEndOf="@id/tvFollowers"
+            android:textSize="12sp"
+            />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvFollowing"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/line"
+            android:background="@color/twitter_black"
             />
 
     </RelativeLayout>
