--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="screen_name">#66757F</color>
     <color name="name">#2B7BB9</color>
     <color name="twitter_blue">#55ACEE</color>
+    <color name="twitter_black">#292f33</color>
 </resources>
